--- a/client/package.json
+++ b/client/package.json
@@ -19,29 +19,29 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@kolkov/ngx-gallery": "^2.0.1",
-    "@microsoft/signalr": "^6.0.2",
+    "@microsoft/signalr": "^6.0.4",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^7.1.2",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-spinner": "^12.0.0",
     "ngx-timeago": "^2.0.0",
-    "ngx-toastr": "^14.2.1",
-    "rxjs": "~6.6.0",
+    "ngx-toastr": "^14.3.0",
+    "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
+    "@angular-devkit/build-angular": "^12.2.17",
+    "@angular/cli": "^12.2.17",
     "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^17.0.25",
+    "jasmine-core": "^4.1.0",
+    "karma": "^6.3.18",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
   }
