--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@microsoft/signalr": "^6.0.4",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
